# lost-metrics-web

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  package-lock.json  package.json  tailwind.config.js
src/: app.html  app.rs  layout.rs  main.rs  routes.rs  side_bar.rs  task_bar.rs
src/components/: app_state_provider.rs  encounter_monitor_provider.rs  icons.rs  mod.rs
src/lib/: api.ts  echarts.ts  types.ts
src/lib/components/: AppStateProvider.svelte  EncounterMonitor.svelte  ProcessWatcher.svelte  Providers.svelte  SettingsManager.svelte  SideBar.svelte  UpdaterManager.svelte
src/lib/echarts/: getClassPopularity.ts  getItemLevelbreakdown.ts  getServerPopulation.ts  index.ts  utils.ts
src/lib/store/: app.ts  encounter.ts  managers.ts  settings.ts
src/models/: mod.rs
src/pages/: home.rs  meter.rs  mod.rs  simulator.rs
src/pages/settings/: meter.rs  mod.rs  sniffer.rs  storage.rs  tab.rs  updates.rs
src/routes/: +layout.svelte  +page.svelte
src/routes/debug/: +page.svelte
src/routes/history/: +page.svelte  Table.svelte
src/routes/info/: +page.svelte
src/routes/meter/: +page.svelte  Meter.svelte  NotRunning.svelte
src/routes/settings/: +page.svelte  sniffer.svelte
src/routes/simulator/: +page.svelte
styles/: main.css  output.css
workflows/: ci.yml
