[package]
name = "lost-metrics-web"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
futures = "0.3.29"
log = "0.4.6"
wasm-logger = "0.2.0"
gloo = "0.11"
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", branch = "v2", features=["event", "app"] }

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Document",
    "HtmlElement",
    "MouseEvent",
    "DomRect",
    "DomTokenList"
]